<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp"
        android:checkableBehavior="single">
        <item
            android:id="@+id/Def"
            android:checked="true"
            android:title="@string/default1" />
        <item
            android:id="@+id/King_Yna"
            android:title="@string/king_yna" />
        <item
            android:id="@+id/Sky"
            android:title="@string/sky" />
        <item
            android:id="@+id/GradeGrey"
            android:title="@string/gradegrey" />
        <item
            android:id="@+id/MegaTron"
            android:title="@string/megatron" />
        <item
            android:id="@+id/PureLust"
            android:title="@string/purelust" />
        <item
            android:id="@+id/Delicate"
            android:title="@string/delicate" />
        <item
            android:id="@+id/Sel"
            android:title="@string/sel" />

    </group>
</menu>